--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Lexicon",
-  "name": "Lexicon Match Pro",
+  "name": "Lexicon App",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3406/3406828.png",
